--- a/src/data/gallery/gallery.yaml
+++ b/src/data/gallery/gallery.yaml
@@ -1,15 +1,36 @@
-- gal_title: Image 1
-  gal_0rder: 01
-  gal_image: ./image1.jpg
-  - gal_title: Image 2
-  gal_0rder: 02
+- photo:
+  gal_title: Image 2
+  gal_order: 1
   gal_image: ./image2.jpg
-  - gal_title: Image 3
-  gal_0rder: 03
+- photo:
+  gal_title: Customer 6
+  gal_order: 2
+  gal_image: ./customer6.jpg  
+- photo:
+  gal_title: Image 3
+  gal_order: 3
   gal_image: ./image3.jpg
-  - gal_title: Image 4
-  gal_0rder: 04
+- photo:
+  gal_title: Image 4
+  gal_order: 4
   gal_image: ./image4.jpg
-  - gal_title: Image 5
-  gal_0rder: 05
-  gal_image: ./image5.jpg
+- photo:
+  gal_title: Customer 1
+  gal_order: 9
+  gal_image: ./customer1.png
+- photo:
+  gal_title: Customer 2
+  gal_order: 6
+  gal_image: ./customer2.png
+- photo:
+  gal_title: Customer 3
+  gal_order: 7
+  gal_image: ./customer3.jpg
+- photo:
+  gal_title: Customer 4
+  gal_order: 8
+  gal_image: ./customer4.jpg
+- photo:
+  gal_title: Customer 5
+  gal_order: 5
+  gal_image: ./customer5.jpg                
